tests/negative/neg_pr115_missing_declaration_semicolon.safe
package Neg_PR115_Missing_Declaration_Semicolon

   type Counter is range 0 to 10;

   function Broken returns Counter
      declare
         Temp : Counter = 0
      begin
         return Temp;
      end;


